Добавлены логи. Справочник логов. Справочник логинов, и добавление ролей. Накинул доступы на все контролеры

--- a/TopSkillsWeb/Views/Accesses/Index.cshtml
+++ b/TopSkillsWeb/Views/Accesses/Index.cshtml
@@ -85,7 +85,13 @@
     }
 
     //Отображение детализации доступа по ролям
-    function onShowPermissionDetail(PermissionId) {
+    function onShowPermissionDetail(PermissionId, e) {
+        if(e!=null){
+            $('.permission_item').removeClass('active');
+            $(e.currentTarget).addClass('active');
+        }
+       
+
         $('#Loading').show();
         $.get('@Url.Action("GetRolePermissionDetailPartial", "Accesses")', { PermissionId: PermissionId }, function(data) {
             if (data != "" && data != null) {
