Добавлен функционал удаления элементов справочников. Исправлено редактирование групп(Что бы изменялись и будущие посещения этой группы)

--- a/TopSkillsWeb/Views/Account/Tabs/MailOptions.cshtml
+++ b/TopSkillsWeb/Views/Account/Tabs/MailOptions.cshtml
@@ -125,6 +125,8 @@
         { 
             ValidField = false;
         }
+
+        AlertValidate('Проверьте корректность заполнения полей');
         return ValidField;
     }
 
