--- a/TopSkillsWeb/Views/Attendance/ContextMenu.cshtml
+++ b/TopSkillsWeb/Views/Attendance/ContextMenu.cshtml
@@ -4,4 +4,7 @@
     <li>
         <a class="dropdown-item" onclick="onCopyElement(@Model)">Перенести</a>
     </li>
+    <li>
+        <a class="dropdown-item" onclick="OnGetConfrimDeleteAttendance(@Model)">@Resource.Delete</a>
+    </li>
 </ul>
