--- a/TopSkillsWeb/Views/Teacher/RowsPart.cshtml
+++ b/TopSkillsWeb/Views/Teacher/RowsPart.cshtml
@@ -1,13 +1,28 @@
 ﻿@model IEnumerable<Core.Teacher>
+
+@{
+    bool edit = ViewBag.Edit ??= false;
+    bool delete = ViewBag.Delete ??= false;
+}
+
 @if (Model != null && Model.Count() > 0)
 {
     @foreach (var item in Model)
     {
         <tr>
             <td>@item.FullName</td>
-            <td>
-                <a onclick="OnGetModalEdit(@item.TeacherId)">@Resource.Edit</a>
+            @if (edit)
+            {
+                <td>
+                    <a onclick="OnGetModalEdit(@item.TeacherId)"><i title="@Resource.Edit" class="ti ti-edit"></i>  @* @Resource.Edit *@</a>
             </td>
+            }
+            @if (delete)
+            {
+                <td>
+                    <a onclick="OnGetConfrimDelete(@item.TeacherId)"> <i title="@Resource.Delete" class="ti ti-trash"></i> @* @Resource.Delete *@</a>
+                </td>
+            }
         </tr>
     }
 }
