--- a/TopSkillsWeb/Views/Attendance/CalendarView.cshtml
+++ b/TopSkillsWeb/Views/Attendance/CalendarView.cshtml
@@ -5,7 +5,6 @@
             <div class="spinner-border spinner-border-sm text-secondary" role="status"></div>
             <span>@Resource.LoadingCalendar</span>
         </div>
-        
     </span>
     <div class="Btn-PN">
     </div>
@@ -298,6 +297,15 @@
             top: e.pageY
         });
         return false;
+    }
+
+
+
+    function OnGetConfrimDeleteAttendance(id) {
+        $.get('@Url.Action("ConfirmDeleteAttendance", "Attendance")', { AttendanceId: id }, function (data) {
+            $('#modal_body').html(data);
+            OpenModal();
+        });
     }
 
 
