--- a/TopSkillsWeb/Views/Group/RowsPart.cshtml
+++ b/TopSkillsWeb/Views/Group/RowsPart.cshtml
@@ -1,4 +1,10 @@
 ﻿@model IEnumerable<Core.Group>
+
+@{
+    bool edit = ViewBag.Edit ??= false;
+    bool delete = ViewBag.Delete ??= false;
+}
+
 @if (Model != null && Model.Count() > 0)
 {
     @foreach (var item in Model)
@@ -11,9 +17,18 @@
             <td class="text-secondary">
                 @item.Teacher?.FullName
             </td>
-            @* <td>
-                <a onclick="OnGetModalEdit(@item.GroupId)">@Resource.Edit</a>
-            </td> *@
+            @if (edit)
+            {
+                <td>
+                    <a onclick="OnGetModalEdit(@item.GroupId)"><i title="@Resource.Edit" class="ti ti-edit"></i>  @* @Resource.Edit *@</a>
+                </td>
+            }
+            @if (delete)
+            {
+                <td>
+                    <a onclick="OnGetConfrimDelete(@item.GroupId)"> <i title="@Resource.Delete" class="ti ti-trash"></i> @* @Resource.Delete *@</a>
+                </td>
+            }
         </tr>
     }
 }
