--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/boxicon/fonts/boxicons.css" />
     <link runat="server" rel="shortcut icon" href="~/logo.ico" type="image/x-icon" />
     <link runat="server" rel="icon" href="~/logo.ico" type="image/ico" />
+    <link rel="stylesheet" href=@("https://cdn.jsdelivr.net/npm/@tabler/icons@latest/iconfont/tabler-icons.min.css")>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.css" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
@@ -201,6 +202,8 @@
         </footer> *@
     </div>
     <div class="modal modal-blur fade" id="modal_body" tabindex="-1" role="dialog" aria-hidden="true"></div>
+
+    <div class="modal modal-blur fade" id="secondmodal_body" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
     <div class="modal modal-blur fade" id="alert_body" tabindex="-1" role="dialog" aria-hidden="true"></div>
     <script src="~/js/site.js" asp-append-version="true"></script>
