--- a/TopSkillsWeb/Views/Student/RowsPart.cshtml
+++ b/TopSkillsWeb/Views/Student/RowsPart.cshtml
@@ -1,4 +1,10 @@
 ﻿@model IEnumerable<Core.Student>
+@{
+    bool edit = ViewBag.Edit ??= false;
+    bool delete = ViewBag.Delete ??= false;
+}
+
+
 @if (Model != null && Model.Count() > 0)
 {
     @foreach (var item in Model)
@@ -6,9 +12,18 @@
         <tr>
             <td>@item.FullName</td>
             <td>@item.Age</td>
-            <td>
-                <a onclick="OnGetModalEdit(@item.StudentId)">@Resource.Edit</a>
-            </td>
+            @if (edit)
+            {
+                <td>
+                    <a onclick="OnGetModalEdit(@item.StudentId)"><i title="@Resource.Edit" class="ti ti-edit"></i>  @* @Resource.Edit *@</a>
+                </td>
+            }
+            @if (delete)
+            {
+                <td>
+                    <a onclick="OnGetConfrimDelete(@item.StudentId)"> <i title="@Resource.Delete" class="ti ti-trash"></i> @* @Resource.Delete *@</a>
+                </td>
+            }
         </tr>
     }
 }
