--- a/TopSkillsWeb/wwwroot/css/CalendarTask.css
+++ b/TopSkillsWeb/wwwroot/css/CalendarTask.css
@@ -550,3 +550,7 @@ td ::-webkit-scrollbar-thumb {
     align-items: center;
     justify-content: space-evenly;
 }
+
+.page-body{
+    margin-top: 0px;
+}
