Добавлена возможность редактировать посещения прошлых дат

--- a/TopSkillsWeb/Views/Attendance/AttendanceTable.cshtml
+++ b/TopSkillsWeb/Views/Attendance/AttendanceTable.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Core.Attendance>
-<link rel="stylesheet" href="~/css/AttendanceList.css" />
+<link rel="stylesheet" href="~/css/AttendanceList.css" asp-append-version="true"/>
 <div class="container-xl mt-3">
     <div class="card">
         <ul class="AttendanceUL">
