--- a/TopSkillsWeb/Views/Attendance/ListExpiredAbonement.cshtml
+++ b/TopSkillsWeb/Views/Attendance/ListExpiredAbonement.cshtml
@@ -2,7 +2,7 @@
 @{
     bool Update = ViewBag.UpdateAbonementAccess??=false;
 }
-<link rel="stylesheet" href="~/css/ListExpiredAbonement.css" />
+<link rel="stylesheet" href="~/css/ListExpiredAbonement.css" asp-append-version="true"/>
 
 <div class="container-xl mt-3">
     <div class="card">
