--- a/TopSkillsWeb/Views/Attendance/ModalStartAttendance.cshtml
+++ b/TopSkillsWeb/Views/Attendance/ModalStartAttendance.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Core.Attendance>
-<link rel="stylesheet" href="~/css/AttendanceStart.css" />
+<link rel="stylesheet" href="~/css/AttendanceStart.css" asp-append-version="true"/>
 
 <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
