--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -262,6 +262,14 @@
             // myString.replace(/[^\w\s!?]/g, '');
         });
 
+
+
+        Date.prototype.format = function () {
+            const year = this.getFullYear();
+            const month = (this.getMonth() + 1).toString().padStart(2, '0');
+            const day = this.getDate().toString().padStart(2, '0');
+            return `${year}.${month}.${day}`;
+        };
     });
 
     function containsTextOrNumbers(inputString) {
@@ -333,8 +341,6 @@
         }
         return color;
     }
-
-    
 
 
 </script>
