--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.css" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    
 </head>
 <body data-bs-theme="">
     <script src="~/js/change-theme.min.js"></script>
+    @await Html.PartialAsync("_Christmas")
     <div class="page">
         <div class="sticky-top">
             <header class="navbar navbar-expand-md navbar-light d-print-none">
@@ -52,7 +52,7 @@
                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                                 @* <a href="#" class="dropdown-item">Status</a>
                                 <a href="./profile.html" class="dropdown-item">Profile</a>
-                                <a href="#" class="dropdown-item">Feedback</a> 
+                                <a href="#" class="dropdown-item">Feedback</a>
                                 <div class="dropdown-divider"></div>*@
                                 <vc:culture-switcher class="mt-3" />
                                 <div class="dropdown-divider"></div>
@@ -161,7 +161,7 @@
                                         </span>
                                     </a>
                                     <div class="dropdown-menu">
-                                         <a class="dropdown-item" asp-controller="Accesses" asp-action="Index">
+                                        <a class="dropdown-item" asp-controller="Accesses" asp-action="Index">
                                             @Resource.Accesses
                                         </a>
                                         <a class="dropdown-item" asp-controller="Logging" asp-action="Index">
@@ -169,6 +169,9 @@
                                         </a>
                                         <a class="dropdown-item" asp-controller="Account" asp-action="Logins">
                                             @Resource.Logins
+                                        </a>
+                                        <a class="dropdown-item" asp-controller="AttendanceDeductionLog" asp-action="Index">
+                                            История списаний посещений
                                         </a>
                                         @*<a class="dropdown-item" href="./changelog.html">
                                         Changelog
@@ -299,7 +302,7 @@
         $("#modal_body").addClass("show");
     }
 
-    function CloseAlert(){
+    function CloseAlert() {
         $('#alert_body').hide();
         $("#alert_body").removeClass("show");
     }
@@ -341,6 +344,4 @@
         }
         return color;
     }
-
-
 </script>
